--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,5 @@
-# This file lists all individuals having contributed content to the repository.
+# This file contains a list of the authors who contributed to this repo
 
 
-Jennifer Huang <133@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
-Joann Vuong <130@holbertonschool.com> 
+Wellington Mwadali <wellingtonmwadali@gmail.com>
+Alexx Maina <lexizgichbuoy@gmail.com>
