--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file contains a list of the authors who contributed to this repo
 
 
-Wellington Mwadali <wellingtonmwadali@gmail.com>
-Alexx Maina <lexizgichbuoy@gmail.com>
+Emmanuel Ndua <emmanuel.nduan@gmail.com>
+Valentine Nyongesa <valentinenyongesa@gmail.com>
